overflow issue fix

--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 }
 body,
 html {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   font-family: "Lato", sans-serif;
 }
 :root {
